@@ -44,6 +44,7 @@ CD at the OF prompt, such as
 
 &boot-installer-intro-hd.xml;
 
+<!--
   <sect3><title>Booting CHRP from OpenFirmware</title>
 
 <para>
@@ -52,6 +53,7 @@ CD at the OF prompt, such as
 
 </para>
    </sect3>
+-->
 
    <sect3><title>Booting OldWorld PowerMacs from MacOS</title>
 <para>
