@@ -84,9 +84,7 @@ url="&url-slug-firmware;">Slug-Firmware site</ulink>.
 
 </para><para arch="x86">
 
-As for ISDN, the D-channel protocol for the (old) German 1TR6 is not
-supported; Spellcaster BRI ISDN boards are also not supported by the
-&d-i;. Using ISDN during the installation is not supported.
+ISDN is supported, but not during the installation.
 
 </para>
 
@@ -131,6 +129,9 @@ be made to work under &debian;, but are not supported during the installation.
 
 </para><para>
 
+The use of wireless networking during installation is still under development
+and whether it will work depends on the type of adaptor and the configuration
+of your wireless access point.
 If there is no other NIC you can use during the installation, it is still
 possible to install &debian; using a full CD-ROM or DVD image. Use the same
 procedure as described above for NICs that require firmware.
