@@ -5,6 +5,10 @@
   <sect2 arch="powerpc"><title>CPU, Main Boards, and Video Support</title>
 <para>
 
+For &debian; &release; only the PMac (Power-Macintosh or PowerMac) and PreP
+subarchitectures are supported.
+
+<!--
 There are four major supported <emphasis>&architecture;</emphasis>
 subarchitectures: PMac (Power-Macintosh or PowerMac), PReP, APUS (Amiga 
 Power-UP System), and CHRP machines. Each subarchitecture has its own boot
@@ -16,6 +20,7 @@ supporting different CPU variants.
 Ports to other <emphasis>&architecture;</emphasis> architectures, such
 as the Be-Box and MBX architecture, are underway but not yet supported
 by Debian. We may have a 64-bit port in the future.
+-->
 
 </para>
 
@@ -23,7 +28,7 @@ by Debian. We may have a 64-bit port in the future.
 
 <para>
 
-There are four flavours of the powerpc kernel in Debian, based on the
+There are two flavours of the powerpc kernel in Debian, based on the
 CPU type:
 
 <variablelist>
@@ -63,6 +68,7 @@ POWER4 architecture, and use this kernel flavour.
 </para></listitem>
 </varlistentry>
 
+<!--
 <varlistentry>
 <term>prep</term>
 <listitem><para>
@@ -81,6 +87,7 @@ currently disabled.
 
 </para></listitem>
 </varlistentry>
+-->
 </variablelist>
 
 </para>
@@ -297,7 +304,7 @@ and, for older hardware,
 
    </sect3>
 
-   <sect3><title>CHRP subarchitecture</title>
+   <sect3><title>CHRP subarchitecture (unsupported)</title>
 
 <para>
 
@@ -326,7 +333,7 @@ and, for older hardware,
 
    </sect3>
 
-   <sect3><title>APUS subarchitecture</title>
+   <sect3><title>APUS subarchitecture (unsupported)</title>
 
 <para>
 
